# redesigned-ubiquity

./: .gitignore  Cargo.toml  README.md  build.rs
core/: Cargo.toml
core/src/: config.rs  lib.rs
core/src/api/: jobshipment.rs  matl.rs  mod.rs  wbs.rs
db/: Cargo.toml
db/schema/: HighSteel_schema.sql  ProgramStatusProc.sql  SapConsumptionProc.sql
db/src/: client.rs  lib.rs  utils.rs
doc/: SapConsumption.md  SigmanestSapConsumption.md
sap_consumption/: Cargo.toml
sap_consumption/doc/: SigmanestSapConsumption.md
sap_consumption/src/: cli.rs  config.rs  dataset.rs  logging.rs  main.rs
sndb_utils/: Cargo.toml
sndb_utils/src/: buffer.rs  input.rs  lib.rs  program.rs  query.rs
src/: config.rs  db.rs  lib.rs  logging.rs
src/api/: jobshipment.rs  mod.rs
src/doc/: SapConsumption.md
src/sql/: HighSteel_schema.sql  SapAnalysisProc.sql  SapConsumptionProc.sql
updatedprograms/: Cargo.toml  build.rs
updatedprograms/src/: buffer.rs  input.rs  lib.rs  main.rs  program.rs  term.rs  termui.rs
workorder/: Cargo.toml
workorder/src/: main.rs
