[workspace]
members = ["core", "sap_consumption", "sndb_utils", "workorder"]
default-members = ["core"]
resolver = "2"

[workspace.dependencies]
sysinteg-core = { path = "core/" }
sysinteg-db = { path = "db/" }
log = "0.4.20"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.192", features = ["derive"] }
tokio = { version = "1.34.0", features = ["rt-multi-thread", "sync", "macros"] }
