[package]
name = "sysinteg-core"
description = "High Steel system integration core library"
version = "0.1.0"
edition = "2021"
authors = ["Patrick Miller"]
license = "MIT"
repository = "https://github.com/paddymills/redesigned-ubiquity"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
log = "0.4.20"
regex = "1.10.3"
serde = { workspace = true }
tokio = { workspace = true }
toml = { version = "0.8.8", features = ["parse"] }
