[package]
name = "sysinteg-db"
description = "High Steel database management"
version = "0.1.0"
edition = "2021"
authors = ["Patrick Miller"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/paddymills/redesigned-ubiquity"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinteg-core = { workspace = true }
serde = { workspace = true }
tiberius = { version = "0.12.2", features = ["sql-browser-tokio", "integrated-auth-gssapi", "chrono"] }
tokio = { workspace = true }
tokio-util = { version = "0.7.10", features = ["compat"] }
