[package]
name = "workorder"
description = "Work order management"
version = "0.1.0"
edition = "2021"
authors = ["Patrick Miller"]
license = "MIT"
repository = "https://github.com/paddymills/redesigned-ubiquity"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
calamine = "0.24.0"
clap = { version = "4.4.8", features = ["derive", "cargo"] }
clap-verbosity-flag = "2.1.0"
log  = { workspace = true }
pretty_env_logger = "0.5.0"
sysinteg-core = { workspace = true }
tokio = { workspace = true }
winapi = { version = "0.3.9", features = ["winuser"] }
